# gt-logging

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  deployment.pri  logging.pro  settings.pri
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
features/: doxygenConfig  gitlab_linux_local_settings-nightly.pri  gitlab_linux_local_settings.pri  gitlab_pipeline_local_settings.pri  gitlab_windows_local_settings-nightly.pri  gitlab_windows_local_settings-nightly512.pri  gitlab_windows_local_settings.pri  gitlab_windows_local_settings512.pri  jenkins_windows_local_settings.pri  local_settings.pri  package_template.xml
src/: CMakeLists.txt  QsLog.cpp  QsLog.h  QsLogDest.h  QsLogDestConsole.cpp  QsLogDestConsole.h  QsLogDestFile.cpp  QsLogDestFile.h  QsLogDestFunctor.cpp  QsLogDestFunctor.h  QsLogDisableForThisFile.h  gt_log.cpp  gt_logdest.cpp  gt_logdest.h  gt_logdestconsole.cpp  gt_logdestconsole.h  gt_logdestfile.cpp  gt_logdestfile.h  gt_logdestfunctor.cpp  gt_logdestfunctor.h  gt_logdisablelogforfile.h  gt_logformatter.h  gt_logging.cpp  gt_logging.h  gt_logging_exports.h  gt_logging_qt_bindings.h  gt_loglevel.cpp  gt_loglevel.h  gt_logmodel.cpp  gt_logmodel.h  gt_logstream.h  src.pro
src/cmake/: GTlabLogging-config.cmake.in  GTlabLoggingConfig.cmake.in
src/gt_logging/: array.h  list.h  map.h  memory.h  qt_bindings.h  set.h  stl_bindings.h  tuple.h  vector.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/badges/: badges.bat
tests/codingstyle/: runCodingstyle.bat
tests/unittests/: CMakeLists.txt  gt_logstatesaver.cpp  main.cpp  runUnittests.bat  runUnittests.sh  runUnittestsQt512.bat  test_basiclog.cpp  test_disable_logger.cpp  test_helper.h  test_log_helper.cpp  test_log_helper.h  test_logdest.cpp  test_logdestfile.cpp  test_logdestfunctor.cpp  test_logdisableforfile.cpp  test_logformatter.cpp  test_logid.cpp  test_loglevel.cpp  test_loglinenumbers.cpp  test_lognospace.cpp  test_logonce.cpp  test_logquote.cpp  test_logstatesaver.cpp  test_types.cpp  test_types_qt.cpp  test_verbosity.cpp  unittests.pro
tests/unittests/cmake/: AddGoogleTest.cmake
